<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Green"
        android:src="@drawable/green" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Yellow"
        android:src="@drawable/yellow" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignRight="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Red"
        android:src="@drawable/red" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="23dp"
        android:text="@string/saveandstart"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/customgreen"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/imageView1"
        android:ems="10"
        android:inputType="time" 
        android:text="00:00">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customgreen"
        android:layout_alignBottom="@+id/customgreen"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/customgreen"
        android:text="@string/min"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/customyellow"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignLeft="@+id/customgreen"
        android:ems="10"
        android:inputType="time"
        android:text="00:00" />

    <EditText
        android:id="@+id/customred"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/customyellow"
        android:ems="10"
        android:inputType="time"
        android:text="00:00" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customyellow"
        android:layout_alignBottom="@+id/customyellow"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/min"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customred"
        android:layout_alignBottom="@+id/customred"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/min"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>